--- a/app/src/main/res/layout/offer_item_row.xml
+++ b/app/src/main/res/layout/offer_item_row.xml
@@ -83,13 +83,27 @@
                 android:textColor="@color/colorGrayDark"
                 android:textSize="9.2sp" />
 
+            <RatingBar
+                android:id="@+id/rating"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/addressTxt"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:stepSize="1"
+                android:theme="@style/RatingBar" />
+
             <View
                 android:id="@+id/view1"
                 android:layout_width="wrap_content"
                 android:layout_height="0.7dp"
-                android:layout_below="@+id/addressTxt"
+                android:layout_below="@+id/rating"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
                 android:background="@color/colorGrayView" />
 
             <RelativeLayout
