--- a/app/src/main/res/layout/activity_add_offer.xml
+++ b/app/src/main/res/layout/activity_add_offer.xml
@@ -117,7 +117,7 @@
                     android:fontFamily="@font/droid_kufi_regular"
                     android:gravity="center"
                     android:hint="@string/previous_price"
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
                     android:padding="10dp"
                     android:textColor="@color/colorWhite"
                     android:textColorHint="@color/colorWhite"
@@ -133,7 +133,7 @@
                     android:fontFamily="@font/droid_kufi_regular"
                     android:gravity="center"
                     android:hint="@string/next_price"
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
                     android:padding="10dp"
                     android:textColor="@color/colorWhite"
                     android:textColorHint="@color/colorWhite"
