--- a/app/src/main/res/layout/activity_shop_details.xml
+++ b/app/src/main/res/layout/activity_shop_details.xml
@@ -110,48 +110,73 @@
                         android:textSize="18.3sp" />
 
                     <RelativeLayout
+                        android:id="@+id/detailsLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/shopNameTxt"
-                        android:layout_marginBottom="15dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_marginTop="6dp"
                         android:gravity="center">
 
                         <TextView
                             android:id="@+id/shopAddressTxt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/droid_kufi_regular"
-                            android:gravity="center_horizontal"
-                            android:text="@string/address_title"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="13.2sp" />
-
-                        <TextView
-                            android:id="@+id/dashTxt"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="10dp"
                             android:layout_marginStart="10dp"
-                            android:layout_toEndOf="@+id/shopAddressTxt"
-                            android:fontFamily="@font/droid_kufi_regular"
-                            android:gravity="center_horizontal"
-                            android:text="@string/dash"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="13.2sp" />
-
-                        <TextView
-                            android:id="@+id/mobileTxt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_toEndOf="@+id/dashTxt"
                             android:fontFamily="@font/droid_kufi_regular"
                             android:gravity="center_horizontal"
                             android:text="@string/address_title"
                             android:textColor="@color/colorWhite"
                             android:textSize="13.2sp" />
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/shopAddressTxt"
+                            android:layout_marginEnd="10dp"
+                            android:layout_marginStart="10dp"
+                            android:gravity="center">
+
+                            <TextView
+                                android:id="@+id/dashTxt"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/droid_kufi_regular"
+                                android:gravity="center_horizontal"
+                                android:text="@string/mobile_number_"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="13.2sp" />
+
+                            <TextView
+                                android:id="@+id/mobileTxt"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="10dp"
+                                android:layout_toEndOf="@+id/dashTxt"
+                                android:fontFamily="@font/droid_kufi_regular"
+                                android:gravity="center_horizontal"
+                                android:text="@string/address_title"
+                                android:textColor="@color/colorWhite"
+                                android:textSize="13.2sp" />
+                        </RelativeLayout>
                     </RelativeLayout>
+
+                    <RatingBar
+                        android:id="@+id/rating"
+                        style="?android:attr/ratingBarStyleSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/detailsLayout"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginBottom="5dp"
+                        android:isIndicator="true"
+                        android:numStars="5"
+                        android:stepSize="1"
+                        android:theme="@style/RatingBar" />
                 </RelativeLayout>
+
 
                 <RelativeLayout
                     android:id="@+id/exhForm"
