--- a/app/src/main/res/layout/activity_select_type.xml
+++ b/app/src/main/res/layout/activity_select_type.xml
@@ -24,7 +24,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/logo_layout"
-            android:layout_marginTop="50dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/droid_kufi_bold"
             android:gravity="center"
             android:text="@string/select_user_type"
