--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -20,10 +20,24 @@
             android:contentDescription="@string/app_name"
             android:src="@drawable/logo_white" />
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/select"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/logo_layout"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:fontFamily="@font/droid_kufi_bold"
+            android:gravity="center"
+            android:text="@string/select_category"
+            android:textColor="@color/colorWhite"
+            android:textSize="16sp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/select"
             android:layout_marginTop="30dp">
 
             <RelativeLayout
