--- a/app/src/main/res/layout/order_item_row.xml
+++ b/app/src/main/res/layout/order_item_row.xml
@@ -105,6 +105,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/dateLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/offerLayout"
@@ -125,6 +126,37 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_toEndOf="@+id/txt"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/droid_kufi_regular"
+                    android:singleLine="true"
+                    android:text="@string/_165"
+                    android:textColor="@color/colorGrayDark"
+                    android:textSize="10sp"
+                    tools:ignore="SmallSp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/statusLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/dateLayout"
+                android:layout_marginTop="5dp">
+
+                <TextView
+                    android:id="@+id/txt1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/droid_kufi_bold"
+                    android:text="@string/order_status"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="11.5sp" />
+
+                <TextView
+                    android:id="@+id/statusTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_toEndOf="@+id/txt1"
                     android:ellipsize="end"
                     android:fontFamily="@font/droid_kufi_regular"
                     android:singleLine="true"
