--- a/app/src/main/res/layout/shop_item_row.xml
+++ b/app/src/main/res/layout/shop_item_row.xml
@@ -70,12 +70,41 @@
                 android:textColor="@color/colorGrayDark"
                 android:textSize="9.2sp" />
 
+            <RelativeLayout
+                android:id="@+id/seenLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/addressTxt">
+
+                <TextView
+                    android:id="@+id/txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/droid_kufi_regular"
+                    android:text="@string/seen_no"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="9.2sp" />
+
+                <TextView
+                    android:id="@+id/seenTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_toEndOf="@+id/txt"
+                    android:fontFamily="@font/droid_kufi_regular"
+                    android:text="@string/_165"
+                    android:textColor="@color/colorGrayDark"
+                    android:textSize="9.2sp" />
+            </RelativeLayout>
+
             <RatingBar
                 android:id="@+id/rating"
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/addressTxt"
+                android:layout_below="@+id/seenLayout"
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
