--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -90,11 +90,39 @@
                 android:textColorHint="@color/colorWhite"
                 android:textSize="15sp" />
 
+            <TextView
+                android:id="@+id/codeTxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/confirmPasswordEditText"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/droid_kufi_regular"
+                android:gravity="center"
+                android:text="@string/have_code_invite_code"
+                android:textColor="@color/colorWhite"
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/codeEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/codeTxt"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_gray_border"
+                android:fontFamily="@font/droid_kufi_regular"
+                android:gravity="center"
+                android:hint="@string/enter_code_here"
+                android:inputType="text"
+                android:padding="10dp"
+                android:textColor="@color/colorWhite"
+                android:textColorHint="@color/colorWhite"
+                android:textSize="15sp" />
+
             <Button
                 android:id="@+id/registerBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/confirmPasswordEditText"
+                android:layout_below="@+id/codeEditText"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/bg_border"
