--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -98,5 +98,38 @@
                 android:text="@string/_970_599_411_474"
                 android:textColor="@color/colorWhite" />
         </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/mobileLayout"
+            android:layout_margin="30dp"
+            android:background="@drawable/bg_white_border"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/ic_facebook"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="0.3"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/ic_facebook" />
+
+            <ImageView
+                android:id="@+id/ic_instagram"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="0.3"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/instagram" />
+
+            <ImageView
+                android:id="@+id/ic_twitter"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="0.3"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/twitter" />
+        </LinearLayout>
     </RelativeLayout>
 </ScrollView>
